--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
   },
   "homepage": "https://github.com/sthanleyso/react-native-template-basic-workflow.git",
   "author": "Sthanley Soares <sthanleys7@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
